--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,9 @@
     <title>Speech to Text with Azure Cognitive Services</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -25,7 +28,7 @@
             <div class="col-md-10">
                 <div class="card shadow-lg">
                     <div class="card-header bg-primary text-white text-center">
-                        <h2>Speech to Text</h2>
+                        <h1>Speech to Text</h1>
                     </div>
                     <div class="card-body">
                         <button class="btn btn-primary mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
