Updated scripts location.

--- a/index.htm
+++ b/index.htm
@@ -131,7 +131,7 @@
     
     
     <!-- Speech SDK reference sdk. -->    
-    <script src="/scripts/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
+    <script src="scripts/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
