--- a/index.htm
+++ b/index.htm
@@ -133,5 +133,6 @@
     <!-- Speech SDK reference sdk. -->    
     <script src="scripts/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
     <script src="script.js"></script>
+    <p>Version 001</p>
 </body>
 </html>
