--- a/index.htm
+++ b/index.htm
@@ -82,7 +82,7 @@
                                 <option value="id-ID">Indonesian</option>
                                 <option value="es-ES">Spanish</option>
                                 <option value="ja-JP">Japanese</option>
-                                <option value="zh-TW">Chinese (Mandarin, traditional)</option>
+                                <option value="zh-TW">Chinese (Mandarin, traditional Taiwan)</option>
                             </select>
                         </div>
                         <div class="mb-3">
@@ -101,7 +101,7 @@
                                 <option value="id">Indonesian</option>
                                 <option value="es">Spanish</option>
                                 <option value="ja">Japanese</option>
-                                <option value="zh">Chinese (Mandarin, traditional)</option>
+                                <option value="zh-Hant">Chinese (Mandarin, traditional)</option>
                             </select>
                         </div>
                         <!-- Get Groq API key from user -->
